RESOLVED FIXED101893
[V8] V8Event::valueAccessorGetter() in custom binding is not used
https://bugs.webkit.org/show_bug.cgi?id=101893
Summary [V8] V8Event::valueAccessorGetter() in custom binding is not used
Kentaro Hara
Reported 2012-11-11 22:26:36 PST
We can remove it.
Attachments
Patch (1.47 KB, patch)
2012-11-11 22:28 PST, Kentaro Hara
no flags
Kentaro Hara
Comment 1 2012-11-11 22:28:28 PST
Adam Barth
Comment 2 2012-11-12 09:31:40 PST
Comment on attachment 173557 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=173557&action=review > Source/WebCore/ChangeLog:4 > + [V8] V8Event::valueAccessorGetter() in custom binding is not used > + https://bugs.webkit.org/show_bug.cgi?id=101893 I'm not sure what you mean by "not used". Why doesn't it cause a compile error? It must be declared in the header...
Adam Barth
Comment 3 2012-11-12 09:32:25 PST
Comment on attachment 173557 [details] Patch It seems to compile without this code, so I guess you're right. I'm not sure why the function is declared in the header though...
Kentaro Hara
Comment 4 2012-11-12 16:03:24 PST
(In reply to comment #3) > (From update of attachment 173557 [details]) > It seems to compile without this code, so I guess you're right. I'm not sure why the function is declared in the header though... That's my question too.
WebKit Review Bot
Comment 5 2012-11-12 17:05:21 PST
Comment on attachment 173557 [details] Patch Clearing flags on attachment: 173557 Committed r134329: <http://trac.webkit.org/changeset/134329>
WebKit Review Bot
Comment 6 2012-11-12 17:05:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.