[V8] V8Event::valueAccessorGetter() in custom binding is not used https://bugs.webkit.org/show_bug.cgi?id=101893

Reviewed by Adam Barth.

No tests. No change in behavior.

* bindings/v8/custom/V8EventCustom.cpp:


Canonical link: https://commits.webkit.org/120072@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134329 268f45cc-cd09-0410-ab3c-d52691b4dbfc